✨ feat (silver layer): Criação da tabela "vendas_produtos_finais" no schema silver com novas colunas e foi feito também uma análise exploratória dos dados

--- a/silver/LAIZA - SILVER -> VENDAS PRODUTOS FINAIS.ipynb
+++ b/silver/LAIZA - SILVER -> VENDAS PRODUTOS FINAIS.ipynb
@@ -67,6 +67,624 @@
     "df = spark.table(\"setorfarmaceutico.bronze.vendas_produtos_finais\")\n",
     "df.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e78b78b1-9128-4776-9f42-2753e0e2ac19",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "19360282-ac01-46c8-91cc-00871fce849a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, to_date, count, mean, datediff, when\n",
+    "\n",
+    "df = (df\n",
+    "    .withColumn(\"nr_nf\", col(\"nr_nf\").cast(\"int\"))\n",
+    "    .withColumn(\"nr_linha\", col(\"nr_linha\").cast(\"int\"))\n",
+    "    .withColumn(\"quantidade_vendida\", col(\"quantidade_vendida\").cast(\"int\"))\n",
+    "    .withColumn(\"valor_unitario\", col(\"valor_unitario\").cast(\"float\"))\n",
+    "    .withColumn(\"valor_total\", col(\"valor_total\").cast(\"float\"))\n",
+    "    .withColumn(\"imposto_percentual\", col(\"imposto_percentual\").cast(\"float\"))\n",
+    "    .withColumn(\"imposto_reais\", col(\"imposto_reais\").cast(\"float\"))\n",
+    "    .withColumn(\"data_emissao_nf\", to_date(col(\"data_emissao_nf\"), \"yyyy-MM-dd\"))\n",
+    "    .withColumn(\"data_vencimento\", to_date(col(\"data_vencimento\"), \"yyyy-MM-dd\"))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "10ae9f52-9767-4af9-852a-498c4a2de781",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tipo_clientes_counts = df.groupBy(\"tipo_cliente\").count()\n",
+    "tipo_clientes_counts.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e61a443b-c648-4a4b-8431-516c4079de08",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### A base está extremamente equilibrada entre 4 segmentos.\n",
+    "- Isso permite análises por canal e estratégias de venda específicas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "51f11b3a-49e4-429d-b8b7-011ddba82647",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "produto_top = (\n",
+    "    df.groupBy(\"nome_produto\")\n",
+    "      .agg(count(\"*\").alias(\"qtd\"))\n",
+    "      .orderBy(col(\"qtd\").desc())\n",
+    "      .limit(10)\n",
+    ")\n",
+    "produto_top.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "202ea56c-23c1-4d16-a21d-e95b62659650",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Esses produtos aparecem muito, mas o insight mais importante é o faturamento (acima)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4ed0eed1-15b0-4750-8efa-2ecb3939c54a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import sum as spark_sum\n",
+    "valor = df.agg(spark_sum(col(\"valor_total\")).alias(\"faturamento\")).collect()[0][\"faturamento\"]\n",
+    "valor_formatado = f\"{valor:,.2f}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")  # formatação PT-BR\n",
+    "print(\"Faturamento total:\", f\"R$ {valor_formatado}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "64a9b2c5-e52f-400c-9c84-2bf5f32639eb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Faturamento total: R$ 9.708.593.780,39 (9,7 bilhões)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fad16f95-ae19-4340-aac8-81becf2f3d76",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "faturamento_por_estado = (\n",
+    "    df.groupBy(\"estado\")\n",
+    "      .agg(spark_sum(col(\"valor_total\")).alias(\"faturamento\"))\n",
+    "      .orderBy(col(\"faturamento\").desc())\n",
+    "      .limit(10)\n",
+    ")\n",
+    "faturamento_por_estado.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "09f53967-4e8c-434a-9176-56ae9e84e838",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Os estados com maior volume de vendas são também os com maior faturamento.\n",
+    "- Regiões Nordeste e Sul aparecem forte."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3aca169d-9e99-4ee7-ad0e-0c9c681b891c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "valor = df.agg(mean(col(\"valor_total\")).alias(\"ticket_medio\")).collect()[0][\"ticket_medio\"]\n",
+    "ticket_formatado = f\"{valor:,.2f}\".replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")\n",
+    "print(\"Ticket médio: R$ \" + ticket_formatado)\n",
+    "print(\"\\nVendas grandes, de alto valor unitário.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7a8ff024-874e-4275-aaa4-ba1401030d38",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "imposto_medio = df.agg(mean(col(\"imposto_percentual\")).alias(\"imposto_medio\"))\n",
+    "imposto_medio.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "73a1e738-01f6-4617-bc77-2fb7efbb1cd5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Percentual está dentro do esperado para produtos farmacêuticos (12.50%)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56142d44-f848-4959-9253-50132b7e5595",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "produto_mais_lucrativo = (\n",
+    "    df.groupBy(\"nome_produto\")\n",
+    "      .agg(spark_sum(col(\"valor_total\")).cast(\"decimal(20,2)\").alias(\"faturamento\"))\n",
+    "      .orderBy(col(\"faturamento\").desc())\n",
+    "      .limit(10)\n",
+    ")\n",
+    "produto_mais_lucrativo.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d3ef6be1-5621-471a-91e1-1cbaf14f51eb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Os produtos “343”, “352” e “24” são os campeões de faturamento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "24f0b164-351d-4479-b123-d9ad996b5c76",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = df.withColumn(\"atraso_dias\", datediff(col(\"data_vencimento\"), col(\"data_emissao_nf\")))\n",
+    "atraso_medio = df.agg(mean(col(\"atraso_dias\")).alias(\"atraso_medio\"))\n",
+    "atraso_medio.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "867f72b6-b12a-4348-b622-e224721d36da",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##### Prazo médio de pagamento de 2 meses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6ab4bab-1195-49cd-9cd2-c52753cc5a09",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Margem bruta estimada (sem custo real)\n",
+    "df = (df.withColumn(\"margem_bruta\", col(\"valor_total\") - col(\"imposto_reais\"))\n",
+    ".withColumn(\"margem_percentual\", col(\"margem_bruta\") / col(\"valor_total\")))\n",
+    "# Útil para ranking de produtos mais rentáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f0bb682-e45c-446b-a355-09942a5dc6c0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Prazo de pagamento real (dias)\n",
+    "df = df.withColumn(\"prazo_dias\", datediff(col(\"data_vencimento\"), col(\"data_emissao_nf\")))\n",
+    "# Pode gerar KPIs por estado, cliente, tipo de cliente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "85c0cccc-c867-4cd5-8943-2648c20f171c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Valor médio por unidade vendida\n",
+    "df = df.withColumn(\"valor_medio_por_unidade\",col(\"valor_total\") / col(\"quantidade_vendida\"))\n",
+    "# Permite identificar produtos premium."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "eb3a1457-3fd5-4912-9413-0bbf833aaa54",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Classificação de portes de venda\n",
+    "df = df.withColumn(\n",
+    "    \"porte_venda\",\n",
+    "    when(col(\"valor_total\") <= 5000, \"Pequena\")\n",
+    "    .when((col(\"valor_total\") > 5000) & (col(\"valor_total\") <= 20000), \"Média\")\n",
+    "    .when((col(\"valor_total\") > 20000) & (col(\"valor_total\") <= 50000), \"Grande\")\n",
+    "    .when(col(\"valor_total\") > 50000, \"Gigante\")\n",
+    ")\n",
+    "# Útil para entender distribuição de vendas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bcd5019d-e7e3-44ba-8555-fd3e6a95ff86",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Imposto efetivo aplicado (Dá para detectar notas com impostos fora do padrão):\n",
+    "df = df.withColumn(\n",
+    "    \"imposto_efetivo_pct\",\n",
+    "    (col(\"imposto_reais\") / col(\"valor_total\")) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5a2f2794-6391-4a9c-aa24-61dc068d8c07",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "65a8b5a3-3964-40fd-bc81-cb95fbe05e59",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "use schema silver;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "581fcc0c-7e2c-4a41-bbba-000d2daa0607",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write \\\n",
+    "    .format(\"delta\") \\\n",
+    "    .mode(\"overwrite\") \\\n",
+    "    .option(\"overwriteSchema\", \"true\") \\\n",
+    "    .saveAsTable(\"silver.stg_vendas_produtos_finais\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e612da62-aab9-4f61-a4f6-be381307f87d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Resumo\n",
+    "- 380 mil vendas registradas.\n",
+    "\n",
+    "- Ticket médio alto: R$ 12,5 mil por venda.\n",
+    "\n",
+    "- Faturamento total superior a R$ R$ 9.708.593.780,39\n",
+    "\n",
+    "- Tipos de clientes equilibrados (farmácia, hospital, SUS, outros).\n",
+    "\n",
+    "- Produtos “343”, “352” e “24” geram maior receita.\n",
+    "\n",
+    "- Imposto médio aplicado: 12,5%.\n",
+    "\n",
+    "- Estados com maior participação: PE, GO, CE, PR, BA.\n",
+    "\n",
+    "- Prazo médio de pagamento: 60 dias.\n",
+    "\n",
+    "- Métrica \"Margem Bruta\" -> Mede o lucro antes de custos operacionais\n",
+    "\n",
+    "- Métrica \"Prazo de Pagamento\" -> Permite análises de ciclo financeiro e risco de recebíveis.\n",
+    "\n",
+    "- Métrica \"Valor Médio por Unidade\" -> Classifica produtos entre premium x baixo custo.\n",
+    "\n",
+    "- Métrica \"Porte de Venda\" -> Ótimo para clusterização comercial e perfil de clientes\n",
+    "  - ClassificaçÃo do tamanho das vendas:\n",
+    "    - Pequena\n",
+    "    - Média\n",
+    "    - Grande\n",
+    "    - Gigante\n",
+    "  - Usando faixas de valor_total\n",
+    "\n",
+    "- Métrica \"Imposto Efetivo (%)\" -> Detecta notas com imposto fora do padrão.\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "70c460e9-8455-4e1b-a689-45a14142560c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
@@ -81,7 +699,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 2312716650641289,
+     "commandId": 6122887669576819,
      "dataframes": [
       "_sqldf"
      ]
