✨feat (gold layer): Adiciona views de métricas relacionadas as 3 bases de dados

--- a/gold/MARCELLO - GOLD.ipynb
+++ b/gold/MARCELLO - GOLD.ipynb
@@ -7,50 +7,6 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "231fbd88-b36a-49de-ba53-36fa84974ec0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%restart_python\n",
-    "%pip install matplotlib seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a67f077d-077d-4691-87d6-fa118a7b85a8",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
       "implicitDf": true,
       "rowLimit": 10000
      },
@@ -65,7 +21,7 @@
    "source": [
     "%sql\n",
     "use catalog setorfarmaceutico;\n",
-    "use schema silver;"
+    "use schema gold;"
    ]
   },
   {
@@ -75,10 +31,11 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "13d81c07-fadf-4c6e-b68e-8a875927fbb4",
+     "nuid": "116b21f8-d65f-401f-b65a-3aea5ad81465",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -86,9 +43,189 @@
    },
    "outputs": [],
    "source": [
-    "df_principios_ativos = spark.table(\"setorfarmaceutico.silver.stg_principios_ativos\")\n",
-    "df_produtos_fabricados = spark.table(\"setorfarmaceutico.silver.stg_produtos_fabricados\")\n",
-    "df_vendas_finais = spark.table(\"setorfarmaceutico.silver.stg_vendas_produtos_finais\")"
+    "%sql\n",
+    "CREATE OR REPLACE TABLE gold.fct_estoque_principio_ativo AS\n",
+    "SELECT\n",
+    "    nome_principio_ativo,\n",
+    "    fabricante,\n",
+    "    SUM(`quantidade_disponível`) AS estoque_total,\n",
+    "    ROUND(MIN(`quantidade_disponível`), 2) AS estoque_min,\n",
+    "    ROUND(MAX(`quantidade_disponível`), 2) AS estoque_max,\n",
+    "    ROUND(MIN(`valor_unitário`), 2) AS preco_min,\n",
+    "    ROUND(MAX(`valor_unitário`), 2) AS preco_max\n",
+    "FROM silver.stg_principios_ativos\n",
+    "WHERE LOWER(status) = 'disponível'\n",
+    "GROUP BY 1,2\n",
+    "ORDER BY nome_principio_ativo, fabricante;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d936d96-b19d-4bcd-aeb4-e5d6e3aeeaf4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from fct_estoque_principio_ativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bde5e277-65a2-4f1c-8e1c-c1b26cc6704b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE OR REPLACE TABLE gold.fct_producao_lote AS\n",
+    "SELECT\n",
+    "    nome_produto,\n",
+    "    quantidade_fabricada,\n",
+    "    data_fabricacao,\n",
+    "    data_validade,\n",
+    "    DATEDIFF(data_validade, data_fabricacao) AS validade_dias,\n",
+    "    CASE\n",
+    "        WHEN current_date() > data_validade                  THEN 'Vencido'\n",
+    "        WHEN DATEDIFF(data_validade, current_date()) <= 30   THEN 'Vence em até 30 dias'\n",
+    "        WHEN DATEDIFF(data_validade, current_date()) <= 90   THEN 'Vence em 31–90 dias'\n",
+    "        ELSE 'Válido (> 90 dias)'\n",
+    "    END AS status_validade,\n",
+    "    lote_fabricacao,\n",
+    "    responsavel_lote,\n",
+    "    fabrica,\n",
+    "    local_armazenamento\n",
+    "FROM silver.stg_produtos_fabricados;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "67a160a7-fdc6-4f56-973d-edfa3c0bab21",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763470103055}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from fct_producao_lote;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9a41e79b-5d9e-4b88-bf06-2d4ec5a9170b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE OR REPLACE TABLE gold.fct_vendas_resumo AS\n",
+    "SELECT\n",
+    " \n",
+    "  date_format(date_trunc('month', data_emissao_nf), 'yyyy-MM') AS mes,\n",
+    "  estado,\n",
+    "  tipo_cliente,\n",
+    "  nome_produto,\n",
+    "\n",
+    "\n",
+    "  ROUND(SUM(quantidade_vendida), 2)                  AS qtd_vendida,\n",
+    "  ROUND(SUM(valor_total), 2)                         AS faturamento_bruto,\n",
+    "  ROUND(SUM(imposto_reais), 2)                       AS impostos_totais,\n",
+    "  ROUND(SUM(valor_total - imposto_reais), 2)         AS receita_liquida,\n",
+    "\n",
+    "  ROUND(AVG(valor_total / quantidade_vendida), 2)    AS preco_medio_unitario,\n",
+    "  ROUND(AVG(DATEDIFF(data_vencimento, data_emissao_nf)), 0) AS prazo_medio_dias,\n",
+    "  ROUND(AVG((imposto_reais / valor_total) * 100), 2) AS imposto_efetivo_medio_pct\n",
+    "\n",
+    "FROM silver.stg_vendas_produtos_finais\n",
+    "GROUP BY\n",
+    "  date_format(date_trunc('month', data_emissao_nf), 'yyyy-MM'),\n",
+    "  estado,\n",
+    "  tipo_cliente,\n",
+    "  nome_produto;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2e3e3477-877a-4829-8654-1c391326c882",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763470548081}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from fct_vendas_resumo;"
    ]
   }
  ],
@@ -104,7 +241,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6582919918209736,
+     "commandId": 6463337739165115,
      "dataframes": [
       "_sqldf"
      ]
